...
                        android:layout_height="25dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/coupon_code_icon" />

                    <EditText
                        android:id="@+id/offer_code_edit_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="sans-serif"
                        android:hint="@string/activate_offer_hint"
...
                    android:textColor="#555555"
                    android:textSize="12sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <Button
                android:id="@+id/activate_offer_bn"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="10dp"
...
